# distributing-iterator

./: .gitignore  Cargo.toml  README.md  Rakefile  distributing_iterator.gemspec  extconf.rb
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: benchmark_large_csv.rs
ext/distributing_iterator/: extconf.rb
lib/: distributing_iterator.rb
lib/distributing_iterator/: version.rb
src/: distribute_csv.rs  distribute_indexes.rs  distributing_iterator.rs  lib.rs  main.rs  ruby_ext.rs
test/: distributing_iterator_test.rb  test_helper.rb
