[package]
name = "distributing-iterator"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Fetlife <dev@fetlife.com>", "Andrii Dmytrenko <refresh.xss@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnus = { version="0.7.1", optional = true }
csv = { version = "^1.3", optional = true }
fnv = "1.0.7"
indexmap = "2.8.0"
anyhow = "1.0.97"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
name = "distributing_iterator"
crate-type = ["cdylib", "lib"]

[features]
default = ["ruby_ext"]
ruby_ext = ["dep:magnus", "csv"]
csv = ["dep:csv"]

[[bench]]
name = "benchmark_large_csv"
harness = false
